--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -2,11 +2,11 @@ spring.application.name=config-server
 server.port=8888
 
 # 配置git仓库地址
-spring.cloud.config.server.git.uri=https://github.com/CrazySpringCloud/sc-f-chapter6.git
+spring.cloud.config.server.git.uri=https://github.com/CrazySpringCloud/sc-f-chapter6
 # 配置仓库路径
 spring.cloud.config.server.git.search-paths=box
 # 配置仓库的分支
-spring.cloud.config.label=master
+spring.cloud.config.label=main
 # 访问git仓库的用户名（如果Git仓库为公开仓库，可以不填写用户名和密码，如果是私有仓库需要填写）
 spring.cloud.config.server.git.username=
 # 访问git仓库的用户密码
