--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -17,3 +17,7 @@ spring:
           password:
       # 配置仓库的分支
       label: main
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8889/eureka/
